--- a/Plachtovac/Client/Components/Forms/BasicInputModal.razor
+++ b/Plachtovac/Client/Components/Forms/BasicInputModal.razor
@@ -22,6 +22,7 @@
     [Parameter]
     public string Title { get; set; }
 
+    [Parameter]
     public string Data { get; set; }
 
     private TextEdit TextElement;
