--- a/Plachtovac/Client/Shared/LoginDisplay.razor
+++ b/Plachtovac/Client/Shared/LoginDisplay.razor
@@ -1,24 +1,45 @@
 ﻿@using Microsoft.AspNetCore.Components.Authorization
 @using Microsoft.AspNetCore.Components.WebAssembly.Authentication
+@using Newtonsoft.Json
+
 @inject NavigationManager Navigation
 @inject SignOutSessionStateManager SignOutManager
 
-<AuthorizeView>
-    <Authorized>
-        Hello, @context.User.Identity.Name!
-        <button class="nav-link btn btn-link" @onclick="BeginSignOut">
-            Log out
-        </button>
-    </Authorized>
-    <NotAuthorized>
-        <a href="authentication/login">Log in</a>
-    </NotAuthorized>
-</AuthorizeView>
+
+<ul class="navbar-nav">
+    <li class="nav-item">
+        <AuthorizeView>
+            <Authorized>
+                <span>Vitaj, @context.User.Identity.Name!</span>
+                @{
+                    try
+                    {
+                        var imgUrl = JsonConvert.DeserializeObject<string[]>(context.User.FindFirst("picture").Value)[0];
+                        <img src="@imgUrl" class="ml-1 rounded-circle" width="32" />
+                    }
+                    catch
+                    {
+                        //pass
+                    }
+                }
+                <button class="nav-link btn btn-link" @onclick="BeginSignOut">
+                    Log out
+                </button>
+            </Authorized>
+            <Authorizing>
+                Authorizing
+            </Authorizing>
+            <NotAuthorized>
+                <a class="nav-link" href="authentication/login">Log in</a>
+            </NotAuthorized>
+        </AuthorizeView>
+    </li>
+</ul>
 
 @code {
     private async Task BeginSignOut(MouseEventArgs args)
     {
-        await SignOutManager.SetSignOutState();
-        Navigation.NavigateTo("authentication/logout");
+
+        await SignOutManager.SetSignOutState();Navigation.NavigateTo("authentication/logout");
     }
 }
