Priprava authentifikacie pre ostrý web

--- a/Plachtovac/Client/Shared/LoginDisplay.razor
+++ b/Plachtovac/Client/Shared/LoginDisplay.razor
@@ -40,6 +40,7 @@
     private async Task BeginSignOut(MouseEventArgs args)
     {
 
-        await SignOutManager.SetSignOutState();Navigation.NavigateTo("authentication/logout");
+        await SignOutManager.SetSignOutState();
+        Navigation.NavigateTo("authentication/logout");
     }
 }
