--- a/Plachtovac/Client/Pages/Editor.razor
+++ b/Plachtovac/Client/Pages/Editor.razor
@@ -18,7 +18,7 @@ public Rozvrh Rozvrh { get; private set; }
     protected override void OnInitialized()
     {
         Rozvrh = PlachtaService.AktualnyRozvrh;
-        if (Rozvrh == null) NavigationManager.NavigateTo("/");
+        if (Rozvrh == null) NavigationManager.NavigateTo("./");
         PlachtaService.RozvrhChanged += PlachtaServiceOnRozvrhChanged;
     }
 
